--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav class="nav-menu d-none d-lg-block">
+      <!--<nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#coc">CoC</a></li>
@@ -58,7 +58,7 @@
 
           <li><a href="#contacts">Contacts</a></li>
 
-        </ul>
+        </ul>-->
       </nav><!-- .nav-menu -->
 
     </div>
@@ -68,19 +68,38 @@
   <section id="hero" class="hero" style="height:75%">
     <div class="container" >
       <div class="row">
+<!--
         <div class="countdown col-sm-6 col-xs-6 col-md-6" data-count="2023/12/4" >
-          <h1>4 - 6 December 2023</h1>
+-->
+          <h1>Thank you to all participants and see you in 2024</h1>
+
           <img id="mrs_bb" src="images/brainhack2023_alpha.png" alt="" class="img-fluid animated">
-          <h2>%d Days %h Hours %m Min %s Sec <br>
+<!--          <h2>%d Days %h Hours %m Min %s Sec <br>
           twinned with the <a href="https://brainhacklucca.github.io/index.html"> <font color="#00FF00"> Brainhack</font> <font color="white"> Lucca</font>  <font color="red"> (Italy)</font></a>
           </h2>
+-->
         </div>
-        <div class="col-sm-6 col-xs-6 col-md-6">
-          <img src="images/brainhack_location.png" style="max-width:520px;width:100%">
-        </div>
+<!--        <div class="col-sm-6 col-xs-6 col-md-6">-->
+<!--          <img src="images/brainhack_location.png" style="max-width:520px;width:100%">-->
+<!--        </div>-->
       </div>
     </div>
   </section><!-- End Hero -->
+
+ <!-- ======= Previous editions Section ======= -->
+  <section id="prev_ed" class="previous">
+    <div class="container">
+      <div class="section-title">
+        <h2>Previous Editions</h2>
+      </div>
+      <li><a href="BHM_2023/BHM_2023.html" target="_blank">Brainhack Marseille 2023</a></li>
+      <li><a href="BHM_2022/BHM_2022.html" target="_blank">Brainhack Marseille 2022</a></li>
+      <li><a href="BHM_2021/BHM_2021.html" target="_blank">Brainhack Marseille 2021</a></li>
+      <li><a href="BHM_2020/BHM_2020.html" target="_blank">Brainhack Marseille 2020</a></li>
+      <li><a href="https://brainhack_marseille.frama.io/ref2019/" target="_blank">Brainhack Marseille 2019</a></li>
+
+    </div>
+  </section><!-- End Previous editions Section -->
 
   <main id="main">
     <!-- ======= Cliens Section ======= -->
@@ -174,6 +193,7 @@
 
  <!-- ======= COC Section ======= -->
 
+    <!--
  <section id="coc" class="coc">
   <div class="container" data-aos="fade-up">
 
@@ -194,19 +214,20 @@
 
   </div>
 </section>
+-->
 
   <!-- ======= Registration Section ======= -->
 
-    <section id="register" class="register">
+  <!--  <section id="register" class="register">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Register</h2>
         </div>
 
-<!--        <p> Registration will open end of summer 2023.</p> -->
+            <p> Registration will open end of summer 2023.</p>
             <div class="d-flex justify-content-center">
-<!--              <H2> The registration deadline is <font color="#FF0000"> Friday 24th November</font></H2>-->
+              <H2> The registration deadline is <font color="#FF0000"> Friday 24th November</font></H2>
               <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2>
             </div>
             <p align="center">
@@ -222,22 +243,21 @@
             </p>
 
         <div class="d-flex justify-content-center">
-          <!-- <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=MR7K9LRJPJ9K8TNX" title="Register now, and send the email!"><h4>REGISTER</h4></a> -->
           <a class="btn btn-warning" href="https://redcap.int.univ-amu.fr/surveys/?s=MR7K9LRJPJ9K8TNX" title="Register now, and send the email!"><h4>REGISTER</h4></a>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- ======= Program Section ======= -->
-    <section id="program" class="program">
+   <!-- <section id="program" class="program">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Program</h2>
         </div>
-<!--
+&lt;!&ndash;
         <p> We are working hard on the Brainhack Marseille 2023 programm, but it's not ready yet. Let us know if you have any suggestions!</p>
-        <p>Please find bellow the program of the Brainhack event (timezone Paris UTC+1). If you want to add the following schedule to your own personal Google agenda, click on the "Save the dates" button and then click on the "+ Google agenda" located at the bottom right of your screen.</p>-->
+        <p>Please find bellow the program of the Brainhack event (timezone Paris UTC+1). If you want to add the following schedule to your own personal Google agenda, click on the "Save the dates" button and then click on the "+ Google agenda" located at the bottom right of your screen.</p>&ndash;&gt;
 
         <div class="d-flex justify-content-center">
           <a class="btn btn-warning" href="https://calendar.google.com/calendar/embed?src=brainhack.marseille%40gmail.com&ctz=Europe%2FParis" target="_blank"><h4>SAVE THE DATES</h4></a>
@@ -245,7 +265,7 @@
 
         <br>
 
-      <!-- ===================== December 4th ===================== -->
+      &lt;!&ndash; ===================== December 4th ===================== &ndash;&gt;
 
         <div class="section-title">
           <h3>Monday 4th December</h3>
@@ -375,10 +395,10 @@
         </tbody>
       </table>
 
-    </section>
+    </section>-->
 
     <!-- ======= Projects Section ======= -->
-    <section id="projects" class="projects">
+    <!--<section id="projects" class="projects">
 
       <div class="container" data-aos="fade-up">
         <div class="section-title">
@@ -393,7 +413,7 @@
         <br>
       </div>
 
-  <!-- ======= Project1 description bullet ======= -->
+  &lt;!&ndash; ======= Project1 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -408,9 +428,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>In a scanner darkly: The next 50 years of neuroscience</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 by Hao Tam Ho & Jean-Michel Hupé</a>
               </p>
@@ -506,9 +526,9 @@
 
       </div>
 
-    <!-- ============ End of Project1 =============== -->
+    &lt;!&ndash; ============ End of Project1 =============== &ndash;&gt;
 
-<!-- ======= Project2 description bullet ======= -->
+&lt;!&ndash; ======= Project2 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -523,9 +543,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>MYOnset: a Python package to detect EMG onset for electrophysiological studies</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 by Laure Spieser & Boris Burle
                 <BR>
@@ -602,9 +622,9 @@
 
       </div>
 
-    <!-- ============ End of Project2 =============== -->
+    &lt;!&ndash; ============ End of Project2 =============== &ndash;&gt;
 
- <!-- ======= Project3 description bullet ======= -->
+ &lt;!&ndash; ======= Project3 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -619,9 +639,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>Electronic laboratory notebook presentation and discussion (eLab)</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 by Sylvain Takerkart & Simon Moré & Killian Rochet
               </p>
@@ -677,9 +697,9 @@
 
       </div>
 
-    <!-- ============ End of Project3 =============== -->
+    &lt;!&ndash; ============ End of Project3 =============== &ndash;&gt;
 
-<!-- ======= Project4 description bullet ======= -->
+&lt;!&ndash; ======= Project4 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -694,9 +714,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>Surf(ac)ing fMRI data</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 by Matthieu Gilson, Julien Sein, Jean-Luc Anton, Andrea Bagante, Martin Szinte <BR>
                 mattermost ID: <a href="https://github.com/matgilson"> @matgilson</a> , @julien.sein, @jl-anton, <a href=" https://github.com/andreabag">@andreabag</a>
@@ -772,9 +792,9 @@
 
       </div>
 
-    <!-- ============ End of Project4 =============== -->
+    &lt;!&ndash; ============ End of Project4 =============== &ndash;&gt;
 
-<!-- ======= Project5 description bullet ======= -->
+&lt;!&ndash; ======= Project5 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -789,9 +809,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>Building models that interpret neuroimaging data</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 by Marmaduke Woodman <BR>
               </p>
@@ -822,7 +842,7 @@
                 </ul>
 
                 <b>Communication channels:</b>
-<!--                <p><a href="https://mattermost.brainhack.org/brainhack/channels/bhg23-marseille-surfacing_fmri_data">via mattermost</a></p>-->
+&lt;!&ndash;                <p><a href="https://mattermost.brainhack.org/brainhack/channels/bhg23-marseille-surfacing_fmri_data">via mattermost</a></p>&ndash;&gt;
                 <p>nothing for the moment</p>
                 <b> Skills</b>
                 <ul >
@@ -892,9 +912,9 @@
 
       </div>
 
-    <!-- ============ End of Project5 =============== -->
+    &lt;!&ndash; ============ End of Project5 =============== &ndash;&gt;
 
-        <!-- ======= Project6 description bullet ======= -->
+        &lt;!&ndash; ======= Project6 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -909,9 +929,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>NARPS Open Pipelines - A codebase to study variability of fMRI analysis workflows</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 <p>by Boris Clénet - R&amp;D Engineer, Empenn Team, INRIA Rennes<br>
                 Mattermost : <a href="https://mattermost.brainhack.org/brainhack/messages/@bclenet" rel="nofollow">@bclenet</a></p>
@@ -1015,9 +1035,9 @@
 
       </div>
 
-    <!-- ============ End of Project6 =============== -->
+    &lt;!&ndash; ============ End of Project6 =============== &ndash;&gt;
 
-        <!-- ======= Project7 description bullet ======= -->
+        &lt;!&ndash; ======= Project7 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -1032,9 +1052,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>PTVR – a visual perception software in Python to make virtual reality experiments easier to build and more reproducible</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 <p>by Eric Castet & Pierre Kornprobst<br>
               </p>
@@ -1135,9 +1155,9 @@
 
       </div>
 
-    <!-- ============ End of Project7 =============== -->
+    &lt;!&ndash; ============ End of Project7 =============== &ndash;&gt;
 
-        <!-- ======= Project8 description bullet ======= -->
+        &lt;!&ndash; ======= Project8 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -1152,9 +1172,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>Across-scales Higher-Order neural interdependencies</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 <p>Andrea Brovelli (<a href="https://twitter.com/BrovelliAndrea" rel="nofollow">https://twitter.com/BrovelliAndrea</a>)<br>
                 Etienne Combrisson (<a href="https://twitter.com/kNearNeighbors" rel="nofollow">https://twitter.com/kNearNeighbors</a>)</p>
@@ -1237,9 +1257,9 @@
 
       </div>
 
-    <!-- ============ End of Project8 =============== -->
+    &lt;!&ndash; ============ End of Project8 =============== &ndash;&gt;
 
-        <!-- ======= Project9 description bullet ======= -->
+        &lt;!&ndash; ======= Project9 description bullet ======= &ndash;&gt;
 
       <div class="container" data-aos="fade-up">
 
@@ -1254,9 +1274,9 @@
           <div class="col">
             <div class="container my-4">
 
-              <!-- <a id="project1"> -->
+              &lt;!&ndash; <a id="project1"> &ndash;&gt;
               <h3>Developing a routine to analyse calcium signals</h3>
-              <!-- </a> -->
+              &lt;!&ndash; </a> &ndash;&gt;
               <p>
                 Elysa Crozat, Jose Jorge Ramirez Franco, Nicolas Wanaverbecq
               </p>
@@ -1312,11 +1332,10 @@
 
       </div>
 
-    <!-- ============ End of Project9 =============== -->
+    &lt;!&ndash; ============ End of Project9 =============== &ndash;&gt;
 
-    </section> <!-- ======= End Projects Section ======= -->
-
-
+    </section> &lt;!&ndash; ======= End Projects Section ======= &ndash;&gt;
+-->
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
@@ -1475,7 +1494,9 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section>
+
+    <!-- End Team Section -->
 
     <!-- ======= Pricing Section ======= -->
  <!--    <section id="pricing" class="pricing">
@@ -1583,32 +1604,11 @@
           <h2>Social network</h2>
         </div>
 
-        <div class="container">
-        <div class="row">
-            <img src="images/brainhackix.png" style="max-width:1024px;width:100%">
-        </div>
-        </div>
-
         <div class="row justify-content-center">
             <a class="twitter-timeline" data-height="800" data-width="800" data-theme="dark" href="https://twitter.com/BrainhackM?ref_src=twsrc%5Etfw">Tweets by Brainhack Marseille</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
     </section>
-
-    <!-- ======= Previous editions Section ======= -->
-    <section id="prev_ed" class="previous">
-      <div class="container">
-        <div class="section-title">
-          <h2>Previous Editions</h2>
-        </div>
-
-        <li><a href="BHM_2022/BHM_2022.html" target="_blank">Brainhack Marseille 2022</a></li>
-        <li><a href="BHM_2021/BHM_2021.html" target="_blank">Brainhack Marseille 2021</a></li>
-        <li><a href="BHM_2020/BHM_2020.html" target="_blank">Brainhack Marseille 2020</a></li>
-        <li><a href="https://brainhack_marseille.frama.io/ref2019/" target="_blank">Brainhack Marseille 2019</a></li>
-
-      </div>
-    </section><!-- End Previous editions Section -->
 
   </main><!-- End #main -->
 
