--- a/index.html
+++ b/index.html
@@ -46,19 +46,20 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <!--<nav class="nav-menu d-none d-lg-block">
+      <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#coc">CoC</a></li>
-          <li><a href="#register">Register</a></li>
-          <li><a href="#program">Program</a></li>
-          <li><a href="#projects">Projects</a></li>
+<!--          <li><a href="#coc">CoC</a></li>-->
+<!--          <li><a href="#register">Register</a></li>-->
+<!--          <li><a href="#program">Program</a></li>-->
+<!--          <li><a href="#projects">Projects</a></li>-->
+          <li><a href="#prev_ed">Previous editions</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="#social">Social network</a></li>
+<!--          <li><a href="#social">Social network</a></li>-->
 
           <li><a href="#contacts">Contacts</a></li>
 
-        </ul>-->
+        </ul>
       </nav><!-- .nav-menu -->
 
     </div>
@@ -1597,7 +1598,7 @@
       </div>
     </section><!-- End Contact Section -->
 
-    <section id="social" class="social section-bg">
+<!--    <section id="social" class="social section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -1608,7 +1609,7 @@
             <a class="twitter-timeline" data-height="800" data-width="800" data-theme="dark" href="https://twitter.com/BrainhackM?ref_src=twsrc%5Etfw">Tweets by Brainhack Marseille</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
-    </section>
+    </section>-->
 
   </main><!-- End #main -->
 
