update main banner

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container">
       <div class="row">
         <h1 style="color: #e9c46a">27 - 29 November 2024</h1>
-        <img id="mrs_bb" src="images/brainhack2024_alpha.png" alt="" class="img-fluid animated">
+        <img id="mrs_bb" src="images/main_banner.png" alt="" class="img-fluid animated">
       </div>
       <div class="countdown col-sm-6 col-xs-6 col-md-6" data-count="2024/11/27">
         <h2 style="color: #e9c46a">%d Days %h Hours %m Min %s Sec to go<br>
