--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
 
         <div class="section-title">
-        <h5><i>Registration will open soon...</i></h5>
+        <h5><i>Registration will open soon ...</i></h5>
       </div>
         <!-- <div class="d-flex justify-content-center">
           <!--              <H2> The registration deadline is <font color="#FF0000"> Friday 24th November</font></H2>-->
@@ -247,7 +247,7 @@
           <h2>Program</h2>
         </div>
         <!--
-        <p> We are working hard on the Brainhack Marseille 2023 programm, but it's not ready yet. Let us know if you have any suggestions!</p>
+        <p> We are working hard on the Brainhack Marseille 2024 program, but it's not ready yet. Let us know if you have any suggestions!</p>
         <p>Please find bellow the program of the Brainhack event (timezone Paris UTC+1). If you want to add the following schedule to your own personal Google agenda, click on the "Save the dates" button and then click on the "+ Google agenda" located at the bottom right of your screen.</p>-->
 
         <div class="d-flex justify-content-center">
