--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <p align="center">
 
-          <a href="https://brainhack.org/code-of-conduct" target="_blank">As all Brainhacks</a>, BrainHackMarseille is
+          <a href="https://brainhack.org/code-of-conduct" target="_blank">As all Brainhacks</a>, BrainHack Marseille is
           dedicated to providing a <b>harassment-free Brainhack experience for everyone</b>,<br>
           regardless of gender, gender identity and expression, sexual orientation, disability, physical appearance,
           body size, race, age or religion.<br>
@@ -231,7 +231,7 @@
 
         <div class="d-flex justify-content-center">
           <!-- <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=MR7K9LRJPJ9K8TNX" title="Register now, and send the email!"><h4>REGISTER</h4></a> -->
-          <a class="btn btn-warning btn-color" href="https://redcap.int.univ-amu.fr/surveys/?s=MR7K9LRJPJ9K8TNX"
+          <a class="btn btn-warning btn-color" href="https://redcap.int.univ-amu.fr/surveys/?s=TPAKFF99R3RCLANW"
             title="Register now, and send the email!">
             <h4>REGISTER</h4>
           </a>
