--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
 
         <div class="section-title">
-        <h5><i>Registration will open soon ...</i></h5>
+        <h5><i>Registration is open now ...</i></h5>
       </div>
         <!-- <div class="d-flex justify-content-center">
           <!--              <H2> The registration deadline is <font color="#FF0000"> Friday 24th November</font></H2>-->
@@ -220,6 +220,7 @@
 
           <br>
           Note that there is a <b></b>limitation of 80 people</b> on site.
+          Please register only if you are sure about your presence, as we do not want to waste food.
           <!-- For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send
           an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the
             organization team</a>. -->
