--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
           <br>
           Note that there is a <b></b>limitation of 80 people</b> on site.
-          Please register only if you are sure about your presence, as we do not want to waste food.
+          Please register <b>only if you are sure about your presence<\b>, as we do not want to waste food.
           <!-- For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send
           an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the
             organization team</a>. -->
