--- a/index.html
+++ b/index.html
@@ -213,14 +213,14 @@
         <h5><i>Registration is open now ...</i></h5>
       </div>
         <!-- <div class="d-flex justify-content-center">
-          <!--              <H2> The registration deadline is <font color="#FF0000"> Friday 24th November</font></H2>-->
+                       <H2> The registration deadline is <font color="#FF0000"> Monday 18th November</font></H2>
         <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
         <!-- </div> -->
         <p align="center">
 
           <br>
           Note that there is a <b></b>limitation of 80 people</b> on site.
-          Please register <b>only if you are sure about your presence<\b>, as we do not want to waste food.
+          Please register only if you are sure about your presence, as we do not want to waste food.
           <!-- For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send
           an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the
             organization team</a>. -->
