--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Bâtiment pédagogique, Timone campus </p>
+                <p>Bâtiment pédagogique ( Yellow Building / Le pavillon jaune) Timone campus </p>
                 <p><i>27 Bd Jean Moulin, 13385 Marseille</i></p>
                 <!--                <p>Faculté de Médecine, 27 Boulevard Jean Moulin, 13005 Marseille</p>-->
               </div>
