--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="section-title">
         <h5><i>Registration is open now ...</i></h5>
       </div>
-        <!-- <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
                        <H2> The registration deadline is <font color="#FF0000"> Monday 18th November</font></H2>
         <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
         <!-- </div> -->
