--- a/index.html
+++ b/index.html
@@ -211,9 +211,10 @@
 
         <div class="section-title">
         <h5><i>Registration is open now ...</i></h5>
+        <h6><i>Deadline is 18th November...</i></h6>
       </div>
-        <div class="d-flex justify-content-center">
-                       <H2> The registration deadline is <font color="#FF0000"> Monday 18th November</font></H2>
+        <!-- <div class="d-flex justify-content-center">-->
+                      <!-- <H2> The registration deadline is <font color="#FF0000"> Monday 18th November</font></H2> -->
         <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
         <!-- </div> -->
         <p align="center">
