add WISE project

--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
         </div>
 
         <div class="section-title">
-        <h5><i>Registration is open now ...</i></h5>
-        <h6><i>Deadline is 18th November...</i></h6>
-      </div>
+          <h5><i>Registration is open now ...</i></h5>
+          <h6><i>Deadline is 18th November...</i></h6>
+        </div>
         <!-- <div class="d-flex justify-content-center">-->
-                      <!-- <H2> The registration deadline is <font color="#FF0000"> Monday 18th November</font></H2> -->
+        <!-- <H2> The registration deadline is <font color="#FF0000"> Monday 18th November</font></H2> -->
         <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
         <!-- </div> -->
         <p align="center">
@@ -424,6 +424,145 @@
             target="_blank">
             <h4>SUBMIT PROJECT</h4>
           </a>
+        </div>
+
+        <br /><br /><br />
+
+        <div class="container aos-init aos-animate" data-aos="fade-up">
+
+          <a class="active" id="project7">
+          </a>
+          <div class="row justify-content-center align-items-center"><a class="active" id="project7">
+            </a>
+
+            <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+              <img src="images/projects/project_wise.jpeg" class="img-fluid" alt="">
+            </div>
+
+            <div class="col">
+              <div class="container my-4">
+
+                <!-- <a id="project1"> -->
+                <h3>WISE: Workflow Improvement by Shifting to python in scientific Endeavors</h3>
+                <!-- </a> -->
+                <p>
+                </p>
+                <p>by Alexandre Lainé &amp; Cyprien Dautrevaux<br>
+                </p>
+
+                <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project7"
+                  role="button" aria-controls="collapse_project7">
+                  <h3>Description</h3>
+                </button>
+
+                <section class="collapse" id="collapse_project7">
+                  <p>Have you ever wanted, but lacked the time, to learn Python programming to update your data analyses
+                    and perhaps enhance them with new tools? In this era where open science is increasingly promoted, we
+                    are offering you the opportunity, over the course of two days, to delve into Python and its free
+                    tools. The idea behind this project is primarily collaborative; we aim to share our programming
+                    expertise to support you in what can sometimes be a long and challenging learning process.
+                    The objective is simple: by the end of these two days, we hope to provide you with a better
+                    understanding of Python’s role and value, help you begin transitioning some of your scripts and
+                    analysis methods, and offer suggestions to improve your workflows.
+                    For this project, no prerequisites or prior documentation are required. We will provide you with an
+                    interface and a ready-to-use environment so you can start programming, even from scratch.
+                    We look forward to seeing you motivated and eager to join this project. If you have any datasets
+                    you'd like to work on, feel free to bring them along, and we’ll be here to guide you. Get ready for
+                    coding!</p>
+
+                  <b>Goals for the BrainHack:</b>
+                  <p>Getting use to Python and overall OpenScience, understand the different roles and interests of
+                    Python programming in scientific studies, be proud of your own code.<br>
+                    <a
+                      href="https://github.com/ericcastet/Brainhack-Marseille-VR">https://github.com/ericcastet/Brainhack-Marseille-VR</a>
+                  </p>
+
+                  <b> Good first issues</b>
+                  <ol>
+                    <li>
+                      <p>A suitable and functioning Python environment (code environment, coding interface …)</p>
+                    </li>
+                    <li>
+                      <p>Know where to find informations, and solve code issues</p>
+                    </li>
+                    <li>
+                      <p>Know the good practices</p>
+                    </li>
+                  </ol>
+
+                  <b>Communication channels:</b>
+                  <p><a href="https://mattermost.brainhack.org/brainhack/channels/bhg2024_wise-project"
+                      rel="nofollow">https://mattermost.brainhack.org/brainhack/channels/bhg2024_wise-project</a>
+                  </p>
+
+                  <b> What will participants learn?</b>
+                  <p>Learn to use the Python language in the broad outlines, to be able to perform your own analyses and
+                    scripts (Statistics, Data exploration, Preprocessing, Automation, Machine learning, Regression …)
+                  </p>
+
+                  <b> Data to use</b>
+                  <p>Feel free to bring your own datasets, and suggest your own analysis interest.</p>
+
+                  <b> Number of collaborators</b>
+                  <p>more</p>
+
+                  <b> Credit to collaborators</b>
+                  <p>All contributors are listed on the project's README.md file.</p>
+
+                  <b> Type</b>
+                  <p>coding_methods, pipeline_development</p>
+                  <b> Development status</b>
+                  <p>0_concept_no_content</p>
+                  <b> Topic</b>
+                  <p>other</p>
+                  <b> Tools</b>
+                  <p>Jupyter, other</p>
+                  <b> Programming language</b>
+                  <p>Python</p>
+                  <b> Modalities</b>
+                  <p>other</p>
+                  <b> Git skills</b>
+                  <p>0_no_git_skills</p>
+
+                </section>
+
+              </div>
+            </div>
+          </div>
+          <br />
+          <div class="row justify-content-center">
+            <div class="col aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+              <h4>Required skills</h4>
+              This is a project for beginners. No prior knowledge is required.:
+            </div>
+          </div>
+
+          <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 10%"
+                aria-valuenow="10" aria-valuemin="50" aria-valuemax="100">
+                Python: 10%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 100%"
+                aria-valuenow="100" aria-valuemin="50" aria-valuemax="100">
+                Motivation: 100%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 90%"
+                aria-valuenow="90" aria-valuemin="50" aria-valuemax="100">
+                Willing to progress: 90%
+              </div>
+            </div>
+
+          </div>
+          <hr style="height:20px">
+
         </div>
       </div>
 
